Refactored and simplified Tenant's components tab Increased contrast in lists Fixed scrollbar is shown in tabs when the window is too small Fixed scrollbar in side menu is always displayed Small refactoring for the future dark theme Fixed deprecated usage of ~ in SCSS Fixed deprecated RxJs calls

--- a/src/app/pages/tenants/tenant/tenant.component.scss
+++ b/src/app/pages/tenants/tenant/tenant.component.scss
@@ -1,5 +1,15 @@
+@import "../../../../assets/scss/core/variables";
 
 .tenant-dialog-size {
   max-height: 600px;
   max-width: 1000px;
 }
+
+.component-item {
+  min-height: 70px;
+
+  &:nth-child(2n+1) {
+    background-color: darken($brand-background, 1%);
+  }
+}
+
