--- a/src/assets/scss/core/_tabs.scss
+++ b/src/assets/scss/core/_tabs.scss
@@ -242,10 +242,6 @@
   }
 }
 
-.mat-tab-label-container {
-  overflow-x: scroll !important;
-}
-
 .mat-tab-label-active {
   color: $brand-primary !important;
   background-color: $brand-background !important;
